--- a/.github/workflows/public_use_private.yaml
+++ b/.github/workflows/public_use_private.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
     - uses: peter-evans/repository-dispatch@v3
       with:
+        token: ${{ secrets.TOKEN_ACTION }}
+        repository: Rosyrain/CI_test
         secrets: inherit
         event-type: test
         client-payload: '{}'
