--- a/.github/workflows/public_use_private.yaml
+++ b/.github/workflows/public_use_private.yaml
@@ -21,7 +21,6 @@ jobs:
         token: ${{ secrets.TOKEN_ACTION }}
         repository: Rosyrain/CI_test
         event-type: test
-        client-payload:
-          '{
+        client-payload: '{
             TOKEN_ACTION: ${{ secrets.TOKEN_ACTION}},
           }'
