--- a/.github/workflows/public_use_private.yaml
+++ b/.github/workflows/public_use_private.yaml
@@ -21,6 +21,7 @@ jobs:
         token: ${{ secrets.TOKEN_ACTION }}
         repository: Rosyrain/CI_test
         event-type: test
-        client-payload: '{
-            TOKEN_ACTION: ${{ secrets.TOKEN_ACTION}},
+        client-payload:
+          '{
+            TOKEN_ACTION: ${{ secrets.TOKEN_ACTION}}
           }'
