--- a/.github/workflows/public_use_private.yaml
+++ b/.github/workflows/public_use_private.yaml
@@ -22,5 +22,5 @@ jobs:
         repository: Rosyrain/CI_test
         event-type: test
         client-payload: '{
-          TOKEN_ACTION: ${{ secrets.TOKEN_ACTION}}
+          "TOKEN_ACTION": "${{ secrets.TOKEN_ACTION}}"
           }'
